security/network_policies/accounts-api/main-2/allow.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-main-2
  namespace: main-2
spec:
  podSelector:
    matchLabels:
      app: accounts-api
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
  egress:
   - to:  
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: db
        podSelector:
          matchLabels:
            app.kubernetes.io/name: postgresql
      - namespaceSelector:
         matchLabels:
          kubernetes.io/metadata.name: kube-system
        podSelector:
         matchLabels:
          k8s-app: kube-dns
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: keycloak
        podSelector:
          matchLabels:
            app: kc
