security/network_policies/accounts-api/main-2/deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-traffic
  namespace: main-2
spec:
  podSelector:
    matchLabels:
      app: accounts-api
  policyTypes:
  - Ingress
  - Egress
  ingress: []
  egress: []
